--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       color: #d63384;
       text-decoration: none;
       font-weight: bold;
+      display: inline-block;
+      margin-top: 1rem;
     }
   </style>
 </head>
@@ -85,6 +87,7 @@
     </form>
     <div class="resultado" id="resultado"></div>
 
+    <!-- Link para página de cadastro de convidados -->
     <div class="link-cadastro">
       <a href="cadastro_real.html">➕ Cadastrar Convidados</a>
     </div>
