--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
       color: #d63384;
       text-decoration: none;
       font-weight: bold;
-      display: inline-block;
-      margin-top: 1rem;
     }
   </style>
 </head>
@@ -87,9 +85,9 @@
     </form>
     <div class="resultado" id="resultado"></div>
 
-    <!-- Link para página de cadastro de convidados -->
+    <!-- Link de Cadastro Atualizado para login.html -->
     <div class="link-cadastro">
-      <a href="cadastro_real.html">➕ Cadastrar Convidados</a>
+      <a href="login.html">➕ Cadastrar Convidados</a>
     </div>
   </div>
 
