--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    const senhaCorreta = "senha123"; // Defina a senha aqui
+    const senhaCorreta = "guilherme"; // Defina a senha aqui
 
     document.getElementById("login-form").addEventListener("submit", function(event) {
       event.preventDefault();
