--- a/cadastro.html
+++ b/cadastro.html
@@ -58,18 +58,25 @@
       border-radius: 10px;
       box-shadow: 0 0 5px rgba(0,0,0,0.1);
     }
+    .lista-item span.nome {
+      flex: 1;
+      text-align: left;
+    }
+    .acoes {
+      display: flex;
+      gap: 0.3rem;
+    }
     .acoes button {
       background: none;
       border: none;
       font-size: 1.2rem;
       cursor: pointer;
-      margin-left: 0.5rem;
-    }
-    .acoes button:hover {
-      opacity: 0.7;
     }
     .acoes .excluir {
       color: red;
+    }
+    .acoes button:hover {
+      opacity: 0.7;
     }
   </style>
 </head>
@@ -94,7 +101,7 @@
         const div = document.createElement('div');
         div.className = 'lista-item';
         div.innerHTML = `
-          <span>${nome} - ${convidados[nome]} pessoa(s)</span>
+          <span class="nome">${nome} - ${convidados[nome]} pessoa(s)</span>
           <span class="acoes">
             <button onclick="editar('${nome}')" title="Editar">✏️</button>
             <button onclick="excluir('${nome}')" class="excluir" title="Excluir">❌</button>
