--- a/cadastro.html
+++ b/cadastro.html
@@ -65,6 +65,7 @@
     .acoes {
       display: flex;
       gap: 0.3rem;
+      align-items: center;
     }
     .acoes button {
       background: none;
@@ -74,6 +75,9 @@
     }
     .acoes .excluir {
       color: red;
+    }
+    .acoes .confirmado {
+      color: green;
     }
     .acoes button:hover {
       opacity: 0.7;
@@ -93,16 +97,19 @@
 
   <script>
     let convidados = JSON.parse(localStorage.getItem('convidados')) || {};
+    let confirmados = JSON.parse(localStorage.getItem('confirmados')) || [];
 
     function atualizarLista() {
       const lista = document.getElementById('lista-convidados');
       lista.innerHTML = '';
       for (let nome in convidados) {
+        const confirmado = confirmados.includes(nome);
         const div = document.createElement('div');
         div.className = 'lista-item';
         div.innerHTML = `
           <span class="nome">${nome} - ${convidados[nome]} pessoa(s)</span>
           <span class="acoes">
+            ${confirmado ? '<span class="confirmado" title="Confirmado">✅</span>' : ''}
             <button onclick="editar('${nome}')" title="Editar">✏️</button>
             <button onclick="excluir('${nome}')" class="excluir" title="Excluir">❌</button>
           </span>
@@ -126,7 +133,9 @@
 
     function excluir(nome) {
       delete convidados[nome];
+      confirmados = confirmados.filter(n => n !== nome);
       localStorage.setItem('convidados', JSON.stringify(convidados));
+      localStorage.setItem('confirmados', JSON.stringify(confirmados));
       atualizarLista();
     }
 
