--- a/cadastro.html
+++ b/cadastro.html
@@ -64,26 +64,28 @@
     }
     .acoes {
       display: flex;
-      gap: 0.5rem;
+      gap: 0.3rem;
       align-items: center;
     }
     .acoes button {
       background: none;
       border: none;
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       cursor: pointer;
     }
     .acoes .excluir {
       color: red;
     }
-    .acoes .confirmado {
-      color: green;
-    }
     .acoes button:hover {
       opacity: 0.7;
     }
     .check {
+      color: green;
       font-size: 1.5rem;
+      visibility: hidden;
+    }
+    .confirmado .check {
+      visibility: visible;
     }
   </style>
 </head>
@@ -106,15 +108,15 @@
       lista.innerHTML = '';
       for (let nome in convidados) {
         const div = document.createElement('div');
-        div.className = 'lista-item';
-        const confirmado = convidados[nome].confirmado ? '✅' : '';
+        div.className = 'lista-item ' + (convidados[nome].confirmado ? 'confirmado' : '');
         div.innerHTML = `
           <span class="nome">${nome} - ${convidados[nome].quantidade} pessoa(s)</span>
           <span class="acoes">
             <button onclick="editar('${nome}')" title="Editar">✏️</button>
             <button onclick="excluir('${nome}')" class="excluir" title="Excluir">❌</button>
-            <span class="check">${confirmado}</span>
+            <button onclick="confirmarPresenca('${nome}')" title="Confirmar presença">✔️</button>
           </span>
+          <span class="check">✔️</span>
         `;
         lista.appendChild(div);
       }
@@ -148,7 +150,7 @@
       }
     }
 
-    function confirmar(nome) {
+    function confirmarPresenca(nome) {
       convidados[nome].confirmado = true;
       localStorage.setItem('convidados', JSON.stringify(convidados));
       atualizarLista();
